[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Fagocito.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pictures/whitecell.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Fagocito" type="Sprite" groups=["enemy"]]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=["Player_damager"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -20, 100 )
scale = Vector2( 50, 50 )
shape = SubResource( 1 )

[node name="Stun_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Stun_Timer" to="." method="_on_Stun_Timer_timeout"]
